C4: Good Docs and some more Forms
I just wanted to oversaturate the repo with VB over C#. That's why I added a form

--- a/C4/C4/My Project/Resources.resx
+++ b/C4/C4/My Project/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="C4Art" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\C4Art.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="c_4logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\c-4logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Song" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Song.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
